package absracted;

public record Location(String name) {}
