package absracted.interfaces;

import absracted.enums.Sound;

public interface Hearing {
    void hear(Sound sound);
}
