package absracted.interfaces;

public interface Memory {
    void think(String thought);
    void remember(String action);
    void understand(String action);
    void dontUnderstand(String action);
}
